--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spice Trade Haven</title>
+    <title>Indo M & S Venture PVT. LTD.</title>
     <meta name="description" content="Premium Indian Spices Import & Export" />
-    <meta name="author" content="Spice Trade Haven" />
+    <meta name="author" content="Indo M & S Venture PVT. LTD." />
 
-    <meta property="og:title" content="Spice Trade Haven" />
+    <meta property="og:title" content="Indo M & S Venture PVT. LTD." />
     <meta property="og:description" content="Premium Indian Spices Import & Export" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
